# bevy_n_back

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: quickstart.yml  release.yaml
assets/sounds/letters/: c.flac  h.flac  k.flac  l.flac  q.flac  r.flac  s.flac  t.flac
src/: cue.rs  game.rs  lib.rs  main.rs  menu.rs  nback.rs  setting.rs  splash.rs  utils.rs
src/core/: cue.rs  mod.rs
src/game/: mod.rs
src/game/core/: cue.rs
src/menu/: mod.rs
src/nback/: cue.rs  mod.rs
