[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
edition = "2021"
name = "bevy_n_back"
publish = false
version = "0.1.0"

[profile.dev]
opt-level = 1

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy/x11",
  "bevy_kira_audio/flac",
]

dev = [
  "bevy/dynamic",
]

[dependencies]
bevy = {version = "0.6.1", default-features = false}
bevy_egui = "0.12.1"
bevy_kira_audio = "0.8.0"
rand = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
winit = {version = "0.25", features = ["x11"]}

[build-dependencies]
embed-resource = "1.4"
