[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
edition = "2021"
name = "bevy_n_back"
publish = false
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "android_shared_stdcxx",
    "tonemapping_luts",
] }
bevy_egui = "0.20.0"
bevy_kira_audio = "0.15.0"
rand = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28.0", features = ["x11"] }

[build-dependencies]
embed-resource = "1.4"
